--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apartment Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">  
     <style>
@@ -72,7 +72,7 @@
     <input type="submit" class="btn btn-danger" value="Add owner Info">
 </form>
 
-<!-- <div class="table mt-5"> -->
+<!-- tenant table -->
     <div class="text mt-5">
         TENANT TABLE   
        </div>
@@ -90,6 +90,7 @@
             <button type="submit" class="tdelete"><i class="bi bi-trash"></i></button>
          
         </form></th>
+        <th><a href="/edit/<%=e._id%>">Edit</a></th>
        
     </tr>
     <%  }); %>
